--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "oracledb": "^5.3.0"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"nodemon ./api/mock-api.js\" \"npm start --prefix react-oracle",
+    "start": "concurrently --kill-others \"nodemon ./api/live-api.js\" \"npm start --prefix react-oracle",
     "test": "concurrently --kill-others \"nodemon ./api/mock-api.js\" \"node ./api/test-api.js"
   },
   "devDependencies": {
